--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: An Astronomer's perspective on Deep Learning
-description: Notes and notebooks of a pro Astronomer diving deep into the wonders of machine learning
+description: Notes and notebooks of an Astronomer diving deep into the wonders of machine learning
 github_username: lposti
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "MLPages"
