--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,9 @@ minima:
     - { platform: ads,             user_url: "https://ui.adsabs.harvard.edu/user/libraries/fCiUp3W_T7qXYNboezCKAg" }
     - { platform: google_scholar,  user_url: "https://scholar.google.com/citations?user=fDDcGdwAAAAJ&hl=en" }
 
+minima:
+  skin: solarized-light
+
 # Set this to true to get LaTeX math equation support
 use_math: true
 
